@@ -1,5 +1,9 @@
 $Id$
 
+2014-11-16  Tommy Vestermark  <tommy.vestermark@gmail.com>
+
+	drivedb.h: USB: Prolific PL2773 (0x067b:0x2773) (ticket #482).
+
 2014-11-16  Christian Franke  <franke@computer.org>
 
 	Create branches RELEASE_6_[1-3]_DRIVEDB with last drivedb.h file
